# hybrid_robot

./: .gitignore  CMakeLists.txt  Hybrid_jumping_Robot.cpp  README.md  trial.cpp  trial.py
hybrid_jumping_robot/: CMakeLists.txt  Tests.cpp  Topiclist  main.cpp  main2.cpp  package.xml  tests.py
hybrid_jumping_robot/Arduino/breakmodeteensy/: breakmodeteensy.ino
hybrid_jumping_robot/Arduino/left_wheel_HJC/: left_wheel_HJC.ino
hybrid_jumping_robot/Arduino/left_wheel_HJC_break/: left_wheel_HJC_break.ino
hybrid_jumping_robot/Arduino/right_wheel_HJC/: right_wheel_HJC.ino
hybrid_jumping_robot/Arduino/right_wheel_HJC_break/: right_wheel_HJC_break.ino
hybrid_jumping_robot/Arduino/test_for_stepper/: test_for_stepper.ino
hybrid_jumping_robot/Arduino/wheel_HC_new/: wheel_HC_new.ino
hybrid_jumping_robot/Arduino/wheel_HJC_break/: wheel_HJC_break.ino
hybrid_jumping_robot/Calculations/: spring.py
hybrid_jumping_robot/Matlab/: Exercise.m  Final_CM.m  Final_Control.m  Final_Inertias.m  Final_Kinematics.m  Kinematics.m  Kinematics_I.m  Kinematics_phi.m  Kinematics_phi_I.m  Plot_bags.m  brake.slx  break_stand.m  break_stand_sim.slx  constants.m  control.m  control_d.m  get_CM.m  jump.m  model.slx  model_d.slx
hybrid_jumping_robot/Matlab/Bad/: break_stand_sim.slx
hybrid_jumping_robot/RPI4/: IMU_robot-1.py  IMU_robot.py  Left_wheel_robot.py  MPU9250.py  Right_wheel_robot.py  madgwick.py  quaternion.py  registers.py  wheel_robot.py
hybrid_jumping_robot/bagfiles/: 2022-05-23-10-24-26.bag  2022-05-23-10-25-41.bag  pitch-1_4-pid-21_5-0-18_5.bag  pitch-1_4-pid-21_5-0-19.bag  record_bag.sh
hybrid_jumping_robot/bagfiles/IMU_test/: 2022-05-16-13-50-51.bag
hybrid_jumping_robot/bagfiles/PID/: 2022-05-12-10-54-24.bag  2022-05-12-10-56-14.bag  2022-05-12-11-00-37.bag  2022-05-12-11-04-33.bag
hybrid_jumping_robot/bagfiles/PID Inverted pendulum test/: 2022-04-28-11-06-03.bag  2022-05-12-11-11-56.bag  2022-05-12-11-15-57.bag  2022-05-18-10-35-21.bag  2022-05-18-10-35-55.bag
hybrid_jumping_robot/bagfiles/angularVelocity/: 2022-05-23-14-05-31.bag
hybrid_jumping_robot/calculations/: spring.py
hybrid_jumping_robot/config/: hybrid_robotV0_2_control.yaml  hybrid_robotV0_3_control.yaml
hybrid_jumping_robot/launch/: control.launch  control_jumping_robot.launch  control_jumping_robot_v2.launch  control_velocity.launch  hybrid_jumping_robot-rw.launch  hybrid_jumping_robot.launch  hybrid_jumping_robot_on_board.launch  model.launch  rivz.launch
hybrid_jumping_robot/nodes/: 2_wheel_stabilizing_node.cpp  4_wheel_break_node.cpp  4_wheel_drive_node.cpp  Actuator_node.cpp  CMakeLists.txt  IMU_node.cpp  IPD_node.cpp  SF_node.cpp  State_machine_node.cpp  Vel_node.cpp
hybrid_jumping_robot/scripts/: Actuator_robot.py  Conversions.py  Gradual_speed.py  Hybrid_jumping_Robot.py  IMU_robot.py  PID.py  Robot.py  Stabilize.py  Vel_robot.py  get_mass_distribution.py  startSM.py  test_pid.py
hybrid_jumping_robot/src/: Actuator_robot.cpp  Actuator_robot.hpp  CMakeLists.txt  Conversions.cpp  Conversions.hpp  Data.hpp  Hybrid_jumping_Robot.cpp  Hybrid_jumping_Robot.hpp  IMU_robot.cpp  IMU_robot.hpp  Inverted_pendulum_drive.cpp  Inverted_pendulum_drive.hpp  Kinematics.cpp  Kinematics.hpp  LQR.cpp  LQR.hpp  Model.cpp  Model.hpp  Observer.cpp  Observer.hpp  PID_controller.cpp  PID_controller.hpp  Robot.cpp  Robot.hpp  StateFeedback.cpp  StateFeedback.hpp  State_machine.cpp  State_machine.hpp  Types.hpp  UnitDelay.cpp  UnitDelay.hpp  Vel_robot.cpp  Vel_robot.hpp  VelocitySmooth.cpp  VelocitySmooth.hpp
hybrid_jumping_robot/tests/: CMakeLists.txt  Tests.cpp  package.xml
hybrid_jumping_robot/tests/Conversions/: conversion_test.py
hybrid_jumping_robot/tests/PID/: CMakeLists.txt  Mat.cpp  Mat.hpp  PID_test.cpp  PID_test.hpp  PID_tests.cpp  Simple_control.cpp  Simple_control.hpp  Tests.cpp  package.xml
hybrid_jumping_robot/tests/testOdom/: test2.txt
hybrid_jumping_robot/urdf/: first_modelV0_2.urdf.xacro  last_model.urdf.xacro  macro.xacro  plugins.gazebo  plugins.gazebo.xacro  plugins_v2.gazebo.xacro  transmission.xacro  transmission_v2.xacro
hybrid_jumping_robot/worlds/: blank.world
hybrid_robot/: CMakeLists.txt  README.md  Topiclist  main.cpp  package.xml  tests.py  trial.cpp
hybrid_robot/Arduino/right_wheel_HJC/: right_wheel_HJC.ino
hybrid_robot/Arduino/test_for_stepper/: test_for_stepper.ino
hybrid_robot/Matlab/: Final_CM.m  Kinematics_I.m  Plot_bags.m  control.m  control_d.m  get_CM.m  model.slx
hybrid_robot/RPI4/: IMU_robot-1.py  IMU_robot.py  mpu9250.py  quaternion.py  wheel_robot.py  wheelrobot.py
hybrid_robot/bagfiles/: record_bag.sh
hybrid_robot/bagfiles/IMU_test/: 0deg.bag  135d.bag  180d.bag  45d.bag  90d.bag
hybrid_robot/bagfiles/PID/: 2022-05-12-11-03-46.bag  2022-05-12-11-10-27.bag
hybrid_robot/config/: gazebo_ros_control_params.yaml  hybrid_robotV0_2_control.yaml
hybrid_robot/first_model/urdf/: robot.urdf  (+5 more)
hybrid_robot/launch/: control_effort.launch  control_position.launch  control_robot.launch  control_robot_v2.launch  control_velocity.launch  gazebo.launch  hybrid_jumping_robot.launch  hybrid_jumping_robot_on_board.launch  hybrid_robot.launch  hybrid_robot_on_board.launch  model.launch  rivz.launch
hybrid_robot/nodes/: 2_wheel_stabilizing_node.cpp  4_wheel_break_node.cpp  4_wheel_drive_node.cpp
hybrid_robot/omtp_scripts/: inertia_matrix.py
hybrid_robot/rviz/: rvizbaseconfig.rviz
hybrid_robot/scripts/: Gradual_speed.py  Hybrid_jumping_Robot.py  Robot.py  Stabilize.py
hybrid_robot/src/: Actuator_robot.hpp  CMakeLists.txt  Conversions.cpp  Conversions.hpp  ExponentialFilter.cpp  ExponentialFilter.hpp  Hybrid_jumping_Robot.cpp  IMU_robot.cpp  IMU_robot.hpp  Inverted_pendulum_drive.cpp  Inverted_pendulum_drive.hpp  Model.cpp  NoiseFilter.hpp  PID_controller.cpp  PID_controller.hpp  StateFeedback.cpp  State_machine.cpp  State_machine.hpp  Types.hpp  Vel_robot.cpp  Vel_robot.hpp
hybrid_robot/tests/: CMakeLists.txt
hybrid_robot/urdf/: first_modelV0_2.urdf.xacro  last_model.urdf.xacro  material.xacro  plugins_v2.gazebo.xacro
hybrid_robot/worlds/: blank.world
(+66 files in other folders)
